--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sidebar Layout</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="sideBar">
+    <div class="sidebarHide">
+        <button>Hide >></button>
+    </div>
+    <div class="sidebarHeader">
+        <span>ToDo</span>
+        <button>+</button>
+    </div>
+    <div class="separator"></div>
+</div>
+<div class="mainContent">
+    Main Content
+</div>
 
+<script src="noteManager.js"></script>
 </body>
 </html>
