--- a/index.html
+++ b/index.html
@@ -8,20 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="sideBar">
-    <div class="sidebarHide">
-        <button>Hide >></button>
+<div id="container">
+    <div id="left_panel">
+        <div id=""></div>
     </div>
-    <div class="sidebarHeader">
-        <span>ToDo</span>
-        <button>+</button>
-    </div>
-    <div class="separator"></div>
+    <div id="drag"></div>
+    <div id="right_panel"></div>
 </div>
-<div class="mainContent">
-    Main Content
-</div>
-
 <script src="resizeController.js"></script>
 </body>
 </html>
