--- a/index.html
+++ b/index.html
@@ -10,11 +10,67 @@
 <body>
 <div id="container">
     <div id="left_panel">
-        <div id=""></div>
+        <h1>ToDo List</h1>
+        <div onclick="" class="item" id="newFile">New File</div>
+        <div class="separator"></div>
+        <ul class="custom-scroll">
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+            <li class="item">t</li>
+        </ul>
     </div>
     <div id="drag"></div>
     <div id="right_panel"></div>
 </div>
+
 <script src="resizeController.js"></script>
 </body>
 </html>
