--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>
 <div class="overlay" id="overlay"></div>
 <div class="modal" id="fileModal">
-    <p>Enter file name:</p>
+    <p id="nameText">Enter file name:</p>
     <input type="text" id="fileName">
     <br><br>
     <button id="okButton">OK</button>
@@ -37,7 +37,7 @@
 
 <div class="overlay" id="overlay2"></div>
 <div class="modal" id="fileModal2">
-    <p>Enter file name:</p>
+    <p id="nameText2">Enter file name:</p>
     <input type="text" id="fileName2">
     <br><br>
     <button id="okButton2">OK</button>
