--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>
 <div class="overlay" id="overlay"></div>
 <div class="modal" id="fileModal">
-    <p id="nameText">Enter file name:</p>
+    <p id="nameText">Enter file namett:</p>
     <input type="text" id="fileName">
     <br><br>
     <button id="okButton">OK</button>
